@@ -29,7 +29,7 @@ with, so we think you'll want to switch once you've used it!
 
 @section installsec Installation
 
-The latest version of LHAPDF is **6.1.3**.
+The latest version of LHAPDF is **6.1.4**.
 
 The source files can be downloaded from https://www.hepforge.org/downloads/lhapdf
 
